--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,7 +7,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-                - actions/checkout@v2
+              uses: actions/checkout@v2
             - run: pwd && ls
             - run: docker-compose up --build -d
             - run: docker-compose exec --env 'RAILS_ENV=test' web rails db:create
