--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -9,6 +9,6 @@ jobs:
             - name: Checkout
               uses: actions/checkout@v2
             - run: docker-compose up --build -d
-            - run: docker-compose exec --env 'RAILS_ENV=test' web rails db:create
-            - run: docker-compose exec --env 'RAILS_ENV=test' web rails db:migrate
-            - run: docker-compose exec --env 'RAILS_ENV=test' web rails test
+            - run: docker-compose exec -T --env 'RAILS_ENV=test' web rails db:create
+            - run: docker-compose exec -T --env 'RAILS_ENV=test' web rails db:migrate
+            - run: docker-compose exec -T --env 'RAILS_ENV=test' web rails test
